[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolsets"
description = "A Python toolsets library"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio[mcp]>=6.0.0",
    "httpx>=0.24.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/your-org/your-repo"
repository = "https://github.com/your-org/your-repo"

[project.optional-dependencies]
dev = [
    "ruff==0.9.3",
    "pytest>=8.0.0,<9.0.0",
]

# [project.scripts]
# toolsets = "toolsets.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["toolsets"]

[tool.hatch.version]
path = "toolsets/package.json"
pattern = ".*\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "I"]
# Ignore line length violations
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
